added navbar and navbar flask features

--- a/templates/front_desk.html
+++ b/templates/front_desk.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container" >
-    <h1>Congrats! Your coffee shop is now named: {{session['name']|capitalize}}</h1>
+    <h1>This is the front desk page!</h1>
 </div>
 
 {% endblock %}
