--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,33 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{{url_for('start')}}">Coffee Shop Game</a>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        {% if session['name'] %}
+        <a class="navbar-brand" href="{{ url_for('front_desk') }}">{{session['name']|capitalize}}</a>
+        {% else %}
+        <a class="navbar-brand" href="{{ url_for('name_shop') }}">Coffee Shop</a>
+        {% endif %}
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="{{ url_for('close_shop') }}">Close Shop</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('name_shop') }}">Rename Shop</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('inventory') }}">Inventory</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Balance: ${{session['balance']}}</a>
+        </li>
+        </ul>
+        </div>
+    </div>
     </nav>
 
     {% block content %}
