--- a/templates/close_shop.html
+++ b/templates/close_shop.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="container" >
+<div class="container text-center" >
     <h1>Are you sure you want to close your coffee shop?</h1>
      {% for mess in get_flashed_messages() %}
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
@@ -10,7 +10,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     {% endfor %}
-    <div class="d-flex gap-4">
+    <div class="d-flex gap-4 justify-content-center">
         <form method="POST">
             {{form.hidden_tag()}}
             {{form.cancel()}}
