--- a/templates/open_shop.html
+++ b/templates/open_shop.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="container" >
+<div class="container text-center" >
     <h1>Congrats! Your coffee shop is now named: {{session['name']|capitalize}}</h1>
     <form method="POST">
         {{form.hidden_tag()}}
