--- a/templates/start.html
+++ b/templates/start.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container">
+<div class="container text-center">
     <h1>Welcome to the Coffee Shop Game!</h1>
     <p>Press the start button to begin</p>
     <form method="POST">
