--- a/templates/front_desk.html
+++ b/templates/front_desk.html
@@ -6,17 +6,17 @@
     <h1>Customer #{{customer_num}}: "{{customer_mess}}"</h1>
     <div class="d-flex gap-4 justify-content-center">
         {% if rejected == False%}
-        {% if accepted == False %}
+            {% if accepted == False %}
+            <form method="POST">
+                {{form.hidden_tag()}}
+                {{form.reject()}}
+            </form>
+            {% endif %}
         <form method="POST">
-            {{form.hidden_tag()}}
-            {{form.reject()}}
+                {{form2.hidden_tag()}}
+                {{form2.make()}}
         </form>
-        {% endif %}
-        <form method="POST">
-            {{form2.hidden_tag()}}
-            {{form2.make()}}
-        </form>
-        {% if accepted %}
+        {% if accepted and session['the_made_coffee'] != None %}
         <form method="POST">
             {{form4.hidden_tag()}}
             {{form4.give()}}
