added mystery coffee type

--- a/templates/coffee_machine.html
+++ b/templates/coffee_machine.html
@@ -94,7 +94,7 @@
         <h1>GOES</h1>
         <h1>HERE</h1>
         {% else %}
-        <h1>NONE COFFEE</h1>
+        <h1>MYSTERY</h1>
         <h1>IMAGE</h1>
         <h1>GOES</h1>
         <h1>HERE</h1>
