--- a/templates/name_shop.html
+++ b/templates/name_shop.html
@@ -6,7 +6,7 @@
     <h1>Congratulations on your new coffee shop!</h1>
     <p>What would you like to name your coffee shop:</p>
     {% else %}
-    <p>What would you like to rename your coffee shop:</p>
+    <h2>What would you like to rename your coffee shop:</h2>
     {% endif %}
     <form method="POST">
         <!-- we pass in our InfoForm() class object form. -->
