--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="icon" href="{{ url_for('static', filename='Espresso.png') }}" type="image/png">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg custom-navbar">
     <div class="container-fluid">
         {% if session['name'] %}
-        <a class="navbar-brand" href="{{ url_for('front_desk') }}">{{session['name']|capitalize}}</a>
+        <a class="navbar-brand" href="{{ url_for('front_desk') }}">{{session['name']|title}}</a>
         {% else %}
         <a class="navbar-brand" href="{{ url_for('name_shop') }}">Coffee Shop</a>
         {% endif %}
