--- a/templates/coffee_machine.html
+++ b/templates/coffee_machine.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container text-center border">
-<h1>This is the coffee machine page!</h1>
-<p>DEBUG: the_made_coffee is {{ session['the_made_coffee'] }}</p>
-  <div class="container text-center border">
+<div class="container text-center">
+<h1>Lets make some coffee!</h1>
+<!-- <p>DEBUG: the_made_coffee is {{ session['the_made_coffee'] }}</p> -->
+  <div class="container text-center">
   <div class="row justify-content-md-center">
-    <div class="col col-md-4 border">
+    <div class="col col-md-4">
     <h3>Recipes:</h3>
-    <div class="accordion" id="accordionExample">
+    <div class="accordion" id="myAccordion">
         <div class="accordion-item">
         <h2 class="accordion-header">
         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -62,7 +62,7 @@
         </div>
         </div>
     </div>
-    <div class="col-md-8 border mb-6 mb-md-0">
+    <div class="col-md-8 mb-6 mb-md-0">
       <h3>The Coffee Machine</h3>
         <form method="POST">
         {{form.hidden_tag()}}
@@ -71,12 +71,16 @@
         {{form.add_milk.label}}{{form.add_milk()}}
         {{form.make}}
         </form>
-        {% for mess in get_flashed_messages() %}
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        <strong>{{mess}}</strong>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-        {% endfor %}
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% for category, message in messages %}
+            {% if category=="insufficient_inventory" %}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>{{message}}</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            {% endif %}
+            {% endfor %}
+        {% endwith %}
         {% if made %}
         {% if session['the_made_coffee'] == 'espresso' %}
         <div class="m-4">
