--- a/static/style.css
+++ b/static/style.css
@@ -125,3 +125,32 @@ select:focus {
 .open_shop_button {
     margin: 1rem;
 }
+
+.coffee-machine-background {
+    background-image: url('/static/Coffee_Machine.png');
+    /* background-size: contain; */
+    background-size: 100% 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 400px;
+    image-rendering: pixelated;
+    image-rendering: crisp-edges;               
+}
+
+.coffee-machine-background label {
+    color: #fff3e0;
+    font-size: 1rem;
+}
+
+.coffee-display-container {
+  position: relative;
+  height: 300px; /* Adjust to your layout */
+  background-color: #f5f5f5; /* Optional */
+  border: 1px solid #ccc;    /* Optional */
+  margin: 2rem;
+}
+
+.coffee-container {
+  padding-top: 4rem;
+}
+
